--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^4.3.1",
     "react-simple-sidenav": "^1.0.1",
     "react-slick": "^0.23.2",
+    "react-transition-group": "^2.5.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
